# web-test-agent

./: .gitignore  DEVELOPMENT_GUIDE.md  PRD-当前实现需求总结.md  README.md  package-lock.json  pyproject.toml
test/: debug.md  (+1 more)
web-agent/: .env.example  PRD-当前实现需求总结.md  langgraph.json  package-lock.json  pyproject.toml  scheduler_tasks.example.json
web-agent/deep_agent/: __init__.py  app.py  workflow.py
web-agent/deep_agent/agent/: __init__.py  artifacts.py  base_agent.py  query_filters.py  specialist_query_config.py  state.py
web-agent/deep_agent/agent/generator/: __init__.py  generator_agent.py
web-agent/deep_agent/agent/generator/prompts/: __init__.py  generator.py  generator_conventions.py
web-agent/deep_agent/agent/healer/: __init__.py  healer_agent.py
web-agent/deep_agent/agent/master/: __init__.py  master_agent.py
web-agent/deep_agent/agent/plan/: __init__.py  plan_agent.py
web-agent/deep_agent/agent/scheduler/: __init__.py  scheduler_agent.py
web-agent/deep_agent/assets/an-autotest-demo/: README.md  package.json
web-agent/deep_agent/assets/demo/: README.md  playwright.config.ts
web-agent/deep_agent/config/: specialist_file_filter.py
web-agent/deep_agent/core/: __init__.py  autotest_project_directory.py  config.py  project_workspace.py  runtime_logging.py
web-agent/deep_agent/core/display_message/: __init__.py  display_messages.py  visible_runtime_messages.py
web-agent/deep_agent/portal/: __init__.py  api.py  events.py  filesystem.py  models.py  routers.py  runner.py  store.py
web-agent/deep_agent/scheduler/: __init__.py  cli.py  cron.py  models.py  service.py  store.py
web-agent/deep_agent/tools/: __init__.py  mcp_manager.py  tool_error_handling.py
web-agent/deep_agent/tools/playwright/: __init__.py  allowlists.py  mcp_provider.py  tool_error_policy.py
web-agent/tests/: test_intent_model.py  test_master_routing.py  test_mcp_manager.py  test_plan_execution.py  test_portal_api.py  test_portal_store.py  test_runtime_logging.py  test_scheduler_service.py  test_specialist_runtime.py  test_visible_runtime_messages.py
web-agent/tests/debug/: DEBUGGING.md  dev.sh  filter_langgraph_log.py  view_log.sh
(+92 files in other folders)
